Deploy academic website with jekyll-scholar

--- a/assets/ref.bib
+++ b/assets/ref.bib
@@ -68,19 +68,6 @@ file = {Shang_2022_NatureCommunications.pdf},
 }
 
 
-@article{shang2023dichotomous,
-  title={Dichotomous effects of oxidative metabolisms: A theoretical perspective on the dolomite problem},
-  author={Shang, Haitao},
-  journal={Global and Planetary Change},
-  doi={http://doi.org/10.1016/j.gloplacha.2023.104041},
-  volume={222},
-  pages={104041},
-  year={2023},
-  publisher={Elsevier},
-  file={Shang_2023_GPC.pdf}
-}
-
-
 @article{shang2023mineral,
   title={Mineral evolution facilitated Earth’s oxidation},
   author={Shang, Haitao},
@@ -95,16 +82,16 @@ file = {Shang_2022_NatureCommunications.pdf},
 }
 
 
-@article{shang2024scale,
-  title={Scale-Independent Variation Rates of Phanerozoic Environmental Variables and Implications for Earth’s Sustainability and Habitability},
+@article{shang2023dichotomous,
+  title={Dichotomous effects of oxidative metabolisms: A theoretical perspective on the dolomite problem},
   author={Shang, Haitao},
-  journal={Mathematical Geosciences},
-  doi={http://doi.org/10.1007/s11004-024-10135-8},
-  volume={56},
-  pages={1469–-1485},
-  year={2024},
-  publisher={Springer},
-  file={Shang_2024_MathGeo.pdf}
+  journal={Global and Planetary Change},
+  doi={http://doi.org/10.1016/j.gloplacha.2023.104041},
+  volume={222},
+  pages={104041},
+  year={2023},
+  publisher={Elsevier},
+  file={Shang_2023_GPC.pdf}
 }
 
 
@@ -149,16 +136,30 @@ file = {Shang_2022_NatureCommunications.pdf},
 }
 
 
-
 @article{shang2024scale,
-  title={Accelerations of the Phanerozoic biogeosystems},
+  title={Scale-Independent Variation Rates of Phanerozoic Environmental Variables and Implications for Earth’s Sustainability and Habitability},
   author={Shang, Haitao},
-  journal={Palaeontology},
-  doi={http://doi.org/10.1111/pala.12734},
-  volume={In press},
-  year={2025},
-  publisher={Weily}
+  journal={Mathematical Geosciences},
+  doi={http://doi.org/10.1007/s11004-024-10135-8},
+  volume={56},
+  number={7},
+  pages={1469–-1485},
+  year={2024},
+  publisher={Springer},
+  file={Shang_2024_MathGeo.pdf}
 }
 
 
 
+@article{shang2025accelerations,
+  title={Accelerations of the Phanerozoic biogeosystems},
+  author={Shang, Haitao},
+  journal={Palaeontology},
+  doi={http://doi.org/10.1111/pala.12734},
+  volume={68},
+  number={1},
+  pages={e12734},
+  year={2025},
+  publisher={Weily},
+  file={Shang_2025_Palaeontology.pdf}
+}
