verify index.md content

--- a/assets/ref.bib
+++ b/assets/ref.bib
@@ -1,30 +1,20 @@
-@otherwork{shang2013continuity,
-  title={Continuity and Discontinuity in Evolutionary Patterns},
-  author={Shang, Haitao},
-  journal={Journal of Wuhan University (Natural Sciences)},
-  year={2013},
-}
 
 
-@article{shang2015dynamics,
-  title={Dynamics of Low-Dimensional Quadratic Families},
+@unpublished{shang2015dynamics,
+  title={On the Dynamics of Complex Quadratic Families under Holomorphic and Non-Holomorphic Singular Perturbations},
   author={Shang, Haitao},
-  doi={http://doi.org/10.48550/arXiv.2012.14374},
-  journal={arXiv:2012.14374},
-  year={2015},
+  Journal={ArXiv:2012.14374},
+  doi={http://10.48550/arXiv.2012.14374},
   file={Shang_2015_arXiv.pdf}
 }
 
-
-@article{eitzel2016community,
+@unpublished{eitzel2016community,
   title={Community resilience and the dynamics of relatedness and residence in a rural Zimbabwean village from 1986 to 2010},
   author={Eitzel, MV and Fan, C and Solera, J and Mawere Ndlovu, A and Changarara, A and Mhike Hove, E and Shang, H and Wilson, KB},
   journal={Proceedings of the SFI 2015 CSSS},
-  year={2016},
   doi={https://sfi-edu.s3.amazonaws.com/sfi-edu/production/uploads/ckeditor/2020/10/29/householdkinshipnetworkszimbabwe_2016_final.pdf},
   file={Eitzel_2016_SFI.pdf}
 }
-
 
 @article{shang2020formation,
   title={Formation of zerovalent iron in iron-reducing cultures of Methanosarcina barkeri},
@@ -56,15 +46,16 @@ file = {Shang_2022_NatureCommunications.pdf},
 @article{shang2023generic,
   title={A generic hierarchical model of organic matter degradation and preservation in aquatic systems},
   author={Shang, Haitao},
-  doi={http://doi.org/10.1038/s43247-022-00667-4},
+  doi={10.1038/s43247-022-00667-4},
   journal={Communications Earth \& Environment},
   volume={4},
   number={1},
   pages={16},
   year={2023},
-  commentary={Jack J. Middelburg. Unified prediction of organic matter preservation and degradation. Communications Earth & Environment. 4, 17 (2023). https://doi.org/10.1038/s43247-023-00682-z},
   publisher={Nature Publishing Group UK London},
-  file={Shang_2023_CEE1.pdf}
+  file={Shang_2023_CEE1.pdf},
+  commentary={Jack J. Middelburg. Unified prediction of organic matter preservation and degradation. Communications Earth \& Environment. 4, 17 (2023). https://doi.org/10.1038/s43247-023-00682-z},
+  commentary_file={Middelburg_2023_Commentary.pdf}
 }
 
 
@@ -162,4 +153,16 @@ file = {Shang_2022_NatureCommunications.pdf},
   year={2025},
   publisher={Weily},
   file={Shang_2025_Palaeontology.pdf}
+}
+
+
+@article{husain2026molecular,
+  title={Molecular clock evidence for an Archean diversification of heme-copper oxygen reductase enzymes},
+  author={Husain, Fatima and Shang, Haitao and Louca, Stilianos and Fournier, Gregory P},
+  journal={Palaeogeography, Palaeoclimatology, Palaeoecology},
+  doi={https://doi.org/10.1016/j.palaeo.2025.113531},
+  pages={113531},
+  year={2026},
+  publisher={Elsevier}, 
+  file={Fatima_2026_Paleo3.pdf}
 }
