--- a/assets/ref.bib
+++ b/assets/ref.bib
@@ -1,7 +1,7 @@
 
 
 @unpublished{shang2015dynamics,
-  title={On the Dynamics of Complex Quadratic Families under Holomorphic and Non-Holomorphic Singular Perturbations},
+  title={Dynamics of Complex Quadratic Families under Holomorphic and Nonholomorphic Singular Perturbations},
   author={Shang, Haitao},
   Journal={ArXiv:2012.14374},
   doi={http://10.48550/arXiv.2012.14374},
